--- a/app/views/about/feedback.html.erb
+++ b/app/views/about/feedback.html.erb
@@ -11,6 +11,6 @@
     <p class="feedback">
       <%= text_area_tag :body %>
     </p>
-    <%= submit_tag 'Enviar' %>
+    <%= submit_tag 'Enviar', :class => 'submit' %>
   <% end %>
 </div>
