--- a/app/views/about/welcome.html.erb
+++ b/app/views/about/welcome.html.erb
@@ -4,8 +4,8 @@
 <p class="about">
   E3E es un proyecto de investigación que pretende comparar el consumo energético de las viviendas de España y los hábitos de consumo de sus habitantes.
 </p>
-<p class="about">
-  Si usted participa en este proyecto podrá conocer cómo se situa su consumo en comparación con el resto de viviendas del mismo tipo y localidad. De esta manera usted podrá tomar medidas para la reduccion de emisiones de CO<sup>2</sup> de su vivienda y saber si es conveniente su rehabilitación.
+<p class="about">C
+  Si usted participa en este proyecto podrá conocer cómo se situa su consumo en comparación con el resto de viviendas del mismo tipo y localidad. De esta manera usted podrá tomar medidas para la reduccion de emisiones de CO<sub>2</sub> de su vivienda y saber si es conveniente su rehabilitación.
 </p>
 <p class="about">
   E3E contribuye a fijar las escalas para la calificación y certificación energética de los edificios existentes.
@@ -18,24 +18,24 @@
 <br/>
 <div class="block">
   <div class="col4">
-    <h2 class="step" id="step1">paso1: encuesta</h2>
+    <div class="step_slide"><%= image_tag 'home/paso1.png' %></div>
     <p><span class="num-step" id="num-step-1">1.</span>Completar una encuesta sobre su vivenda y hábitos de consumo que no le llevará más de 10 minutos. Algunas preguntas se activan o desactivan en función de respuestas anteriores.
     </p>
   </div>
   <div class="col4">
-    <h2 class="step" id="step2">paso2: gas</h2>
+    <div class="step_slide"><%= image_tag 'home/paso2.png' %></div>
     <p><span class="num-step" id="num-step-2">2.</span>
       Introducir datos de las facturas energéticas: gas y electricidad. Para saber si su vivienda está gastando demasiado necesitamos un histórico de sus facturas. Hemos ideado un sistema para que la introducción de datos sea tan sencillo como un juego.
     </p>
   </div>
   <div class="col4">
-    <h2 class="step" id="step3">paso3: electricidad</h2>
+    <div class="step_slide"><%= image_tag 'home/paso3.png' %></div>
     <p><span class="num-step" id="num-step-3">3.</span>
       Introducir datos de las facturas energéticas: gas y electricidad. Para saber si su vivienda está gastando demasiado necesitamos un histórico de sus facturas. Hemos ideado un sistema para que la introducción de datos sea tan sencillo como un juego.
     </p>
   </div>
   <div class="col4">
-    <h2 class="step" id="step4">paso4: Ver informe</h2>
+    <div class="step_slide"><%= image_tag 'home/paso4.png' %></div>
     <p><span class="num-step" id="num-step-4">4.</span>
       Acceder al informe que ha generado la herramienta. E3E le informará sobre el consumo energético de su vivienda con respecto a las demás y sobre posibles medidas para reducirlo.
     </p>
