--- a/app/views/layouts/e3e.html.erb
+++ b/app/views/layouts/e3e.html.erb
@@ -26,7 +26,7 @@
     <div class="wrapper">
       <div class="ie6sucks">
         <div id="top" class="container">
-          <div id="logo">e3e</div>
+          <div id="logo" style="display: none;">e3e</div>
           <div id="navigation">
             <div class="session">
               <%= link_to t(:feedback), feedback_path, :id => 'feedback' %>
