--- a/app/stylesheets/sprites.css
+++ b/app/stylesheets/sprites.css
@@ -3,36 +3,36 @@
        background: url(/images/sprite.png) no-repeat top left;
 }
 
-.sprite-e_num1 { background-position: 0 0; }
-.sprite-e_num2 { background-position: 0 -18px; }
-.sprite-e_num3 { background-position: 0 -36px; }
-.sprite-e_num4 { background-position: 0 -54px; }
-.sprite-e_num5 { background-position: 0 -72px; }
-.sprite-e_num6 { background-position: 0 -90px; }
-.sprite-electricidad_less { background-position: 0 -108px; }
-.sprite-electricidad_more { background-position: 0 -152px; }
-.sprite-electricidad_off { background-position: 0 -196px; }
-.sprite-electricidad_on { background-position: 0 -228px; }
-.sprite-encuesta_off { background-position: 0 -260px; }
-.sprite-encuesta_on { background-position: 0 -292px; }
-.sprite-gas_less { background-position: 0 -324px; }
-.sprite-gas_more { background-position: 0 -368px; }
-.sprite-gas_off { background-position: 0 -412px; }
-.sprite-gas_on { background-position: 0 -444px; }
-.sprite-guardar_electricidad { background-position: 0 -476px; }
-.sprite-guardar_encuesta { background-position: 0 -507px; }
-.sprite-guardar_gas { background-position: 0 -538px; }
-.sprite-hazclick { background-position: 0 -569px; }
-.sprite-help_paso1 { background-position: 0 -645px; }
-.sprite-help_paso2 { background-position: 0 -876px; }
-.sprite-help_paso3 { background-position: 0 -1107px; }
-.sprite-help_paso4 { background-position: 0 -1338px; }
-.sprite-home_step1 { background-position: 0 -1569px; }
-.sprite-home_step2 { background-position: 0 -1587px; }
-.sprite-home_step3 { background-position: 0 -1605px; }
-.sprite-home_step4 { background-position: 0 -1623px; }
-.sprite-informe_off { background-position: 0 -1641px; }
-.sprite-informe_on { background-position: 0 -1673px; }
-.sprite-logo { background-position: 0 -1705px; }
-.sprite-quees { background-position: 0 -1771px; }
-
+.sprite-enviar { background-position: 0 0; }
+.sprite-e_num1 { background-position: 0 -28px; }
+.sprite-e_num2 { background-position: 0 -46px; }
+.sprite-e_num3 { background-position: 0 -64px; }
+.sprite-e_num4 { background-position: 0 -82px; }
+.sprite-e_num5 { background-position: 0 -100px; }
+.sprite-e_num6 { background-position: 0 -118px; }
+.sprite-electricidad_less { background-position: 0 -136px; }
+.sprite-electricidad_more { background-position: 0 -180px; }
+.sprite-electricidad_off { background-position: 0 -224px; }
+.sprite-electricidad_on { background-position: 0 -256px; }
+.sprite-encuesta_off { background-position: 0 -288px; }
+.sprite-encuesta_on { background-position: 0 -320px; }
+.sprite-gas_less { background-position: 0 -352px; }
+.sprite-gas_more { background-position: 0 -396px; }
+.sprite-gas_off { background-position: 0 -440px; }
+.sprite-gas_on { background-position: 0 -472px; }
+.sprite-guardar_electricidad { background-position: 0 -504px; }
+.sprite-guardar_encuesta { background-position: 0 -535px; }
+.sprite-guardar_gas { background-position: 0 -566px; }
+.sprite-hazclick { background-position: 0 -597px; }
+.sprite-home_step1 { background-position: 0 -673px; }
+.sprite-home_step2 { background-position: 0 -691px; }
+.sprite-home_step3 { background-position: 0 -709px; }
+.sprite-home_step4 { background-position: 0 -727px; }
+.sprite-informe_off { background-position: 0 -745px; }
+.sprite-informe_on { background-position: 0 -777px; }
+.sprite-entrar { background-position: 0 -809px; }
+.sprite-alta { background-position: 0 -837px; }
+.sprite-logo { background-position: 0 -865px; }
+.sprite-que_off { background-position: 0 -931px; }
+.sprite-que_on { background-position: 0 -963px; }
+.sprite-quees { background-position: 0 -995px; }
