--- a/app/views/layouts/e3e.html.erb
+++ b/app/views/layouts/e3e.html.erb
@@ -29,11 +29,12 @@
           <div id="logo" style="display: none;">e3e</div>
           <div id="navigation">
             <div class="session">
-              <%= link_to t(:feedback), feedback_path, :id => 'feedback' %>
               <% if signed_in? %>
+              <span id="welcome" style="">Usuario: '<%= current_user.username %>' &nbsp;&nbsp;&nbsp;> </span>
                 <%= link_to t('users.profile'), edit_user_path(current_user), :id => 'profile' %>
-                <%= link_to t(:user_session_close), logout_path, :method => 'delete' %>
-                <span id="welcome" style="">Está registrado/a como '<%= current_user.username %>'</span>
+                <%= link_to t(:user_session_close), logout_path, :method => 'delete', :id => 'logout' %>
+              <% else %>
+                <%= link_to t('Entrar'), login_path, :id => 'enter' %>
               <% end -%>
             </div>
 
@@ -62,9 +63,12 @@
               <%= link_to image_tag('partners/torroja.png'), 'http://www.ietcc.csic.es/'  %>
               <%= link_to image_tag('partners/aicia2.jpg'), 'http://www.aicia.es/'  %>
               <div id="copyright">
-                <p>&copy; Instituto de Ciencias de la Construcción Eduardo Torroja.</p>
+                <p>&copy; IETcc.csic y aicia 2010.</p>
                 <p>Software desarrollado por <a href="http://calclab.com" class="calc">calc</a><p/>
               </div>
+            </div>
+            <div id="feedback" class="block">
+              <%= link_to t(:feedback), feedback_path %>
             </div>
             <br/>
           </div>
