espero que sea el último trabajo para dani

--- a/app/views/invoices/_edit.html.erb
+++ b/app/views/invoices/_edit.html.erb
@@ -98,7 +98,7 @@
     <%= hidden_field_tag :scale_max_value,  current_user.invoice_scale_max, :id => 'scale_max_value' %>
   </div>
   <p>
-    <%= submit_tag t(:submit), :class => 'invoice_submit' %>
+    <%= submit_tag '', :class => 'invoice_submit' %>
     <a name="guardar"></a>
   </p>
 <% end %>
