--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -101,7 +101,7 @@
     <p class="info"><%=  t(:opina, :scope => [:encuesta, :opinion]) %></p>
     <p><label>&nbsp;</label><%= f.text_area :opinion %></p>
     <p>
-      <%= f.submit 'Guardar', :id => 'survey-submit' %>
+      <%= f.submit '', :id => 'survey-submit' %>
       <a name="guardar"></a>
     </p>
   <% end %>
