--- a/app/views/about/welcome.html.erb
+++ b/app/views/about/welcome.html.erb
@@ -44,7 +44,9 @@
 
 <br/><br/><br/>
 <div class="block">
-  <div id="video" class="col2"><object width="400" height="390"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=8079860&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=8079860&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="400" height="390"></embed></object></div>
+  <div id="video" class="col2">
+    <object width="400" height="260"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=8816220&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=8816220&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="400" height="260"></embed></object>
+  </div>
   <div id="learn" class="col2">
     <h2>Aprenda algo más del proyecto E3E</h2>
     <p class="about">En este vídeo puede ver cómo se rellena la encuesta de E3E. COMPLETAR TEXTO</p>
