estoy harto de e3e

--- a/app/views/invoices/_edit.html.erb
+++ b/app/views/invoices/_edit.html.erb
@@ -12,6 +12,7 @@
 
         var barColor = $("#colors").css("background-color");
         var darkColor = $("#colors").css("color");
+        $("#learn h2").css("color", darkColor);
         var vals = [];
         var labels = [];
         $("#dataset .data").each(function() {
@@ -102,4 +103,14 @@
     <a name="guardar"></a>
   </p>
 <% end %>
+</div>
+<br/><br/>
+<div class="block">
+  <div id="video" class="col2">
+    <object width="400" height="260"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=8816220&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=8816220&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="400" height="260"></embed></object>
+  </div>
+  <div id="learn" class="col2">
+    <h2>Cómo introducir los datos de la factura</h2>
+    <p class="about">En este vídeo puede ver cómo se rellena la encuesta de E3E. COMPLETAR TEXTO</p>
+  </div>
 </div>
