--- a/app/stylesheets/public.less
+++ b/app/stylesheets/public.less
@@ -80,10 +80,11 @@ span#num-step-3 {.sprite-home_step3;}
 span#num-step-4 {.sprite-home_step4;}
 
 .col2 {width: 450px; float: left;}
+.col2-center {width: 500px; margin: 0 auto;text-align:  center; border: 1px solid #efefef; padding: 2em;}
 #video {}
 #learn h2 {height: 30px; display: block;}
 #learn p {height: 290px;}
-#learn a#start_here {
+a#start_here {
     width: 438px; height: 71px;
     .sprites; .sprite-hazclick;}
 p.about.note {font-size: 100%; font-style: italic; }
