--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -4,3 +4,6 @@
 <p class="about">
   Muchas gracias por rellenar la encuesta e introducir sus datos de consumo. Con los resultados del estudio en unos meses podrá comparar el consumo de su vivienda con el resto del parque edificatorio. Por favor <strong>recuerde su nombre de usuario para volver a consultar este portal</strong>.
 </p>
+<p class="about">
+  Por favor, no olvide su contraseña para poder consultar este informe más adelante. <br/>Le recordamos que su nombre de usuario es: <b><%= current_user.username %></b>
+</p>
