--- a/app/views/about/welcome.html.erb
+++ b/app/views/about/welcome.html.erb
@@ -4,7 +4,7 @@
 <p class="about">
   E3E es un proyecto de investigación que pretende comparar el consumo energético de las viviendas de España y los hábitos de consumo de sus habitantes.
 </p>
-<p class="about">C
+<p class="about">
   Si usted participa en este proyecto podrá conocer cómo se situa su consumo en comparación con el resto de viviendas del mismo tipo y localidad. De esta manera usted podrá tomar medidas para la reduccion de emisiones de CO<sub>2</sub> de su vivienda y saber si es conveniente su rehabilitación.
 </p>
 <p class="about">
