--- a/app/views/about/welcome.html.erb
+++ b/app/views/about/welcome.html.erb
@@ -25,13 +25,13 @@
   <div class="col4">
     <div class="step_slide"><%= image_tag 'home/paso2.png' %></div>
     <p><span class="num-step" id="num-step-2">2.</span>
-      Introducir datos de las facturas energéticas: gas y electricidad. Para saber si su vivienda está gastando demasiado necesitamos un histórico de sus facturas. Hemos ideado un sistema para que la introducción de datos sea tan sencillo como un juego.
+      En caso de que su vivenda disponga de instalación de gas con contador necesitamos conocer su consumo para poder analizarla energéticamente. Hemos ideado un sistema para que la introducción de datos sea tan sencillo como un juego.
     </p>
   </div>
   <div class="col4">
     <div class="step_slide"><%= image_tag 'home/paso3.png' %></div>
     <p><span class="num-step" id="num-step-3">3.</span>
-      Introducir datos de las facturas energéticas: gas y electricidad. Para saber si su vivienda está gastando demasiado necesitamos un histórico de sus facturas. Hemos ideado un sistema para que la introducción de datos sea tan sencillo como un juego.
+      El último dato que necesitamos para realizar el estudio es su consumo eléctrico. Para saber si su vivienda está gastando demasiado necesitamos un histórico de sus facturas.
     </p>
   </div>
   <div class="col4">
