--- a/app/views/invoices/_edit.html.erb
+++ b/app/views/invoices/_edit.html.erb
@@ -70,13 +70,7 @@
   </script>
 <% end %>
 
-
-<p class="about">Para ello coja la última factura que tenga a su disposición e intente representar el mismo dibujo
-  que aparece en la misma.</p>
-<p class="about">Pinchando sobre el gráfico puede cambiar el valor del consumo según el mes. De aquellos meses
-  que no disponga datos (N/D), déjelo en blanco (puede poner en blanco un mes pulsando sobre el nombre del mismo).</p>
-<p class="about"><a href="#video">Pulse aquí para ver un ejemplo de cómo introducir sus datos.</a></p>
-
+  <p class="about">Para más información, puede ver <a href="#video">este vídeo.</a></p>
 <div id="invoice" class="<%= controller.class.name  %>">
   <div id="colors">&nbsp;</div>
 <div id="chart_panel">
