--- a/app/stylesheets/public.less
+++ b/app/stylesheets/public.less
@@ -188,5 +188,7 @@ table.dataset span {margin-left: 0; margin-right: 1em; color: gray;}
 #invoice.GasController .invoice_submit {width: 222px; .sprite-guardar_gas;}
 #invoice.ElectricidadController .invoice_submit {width: 231px; .sprite-guardar_electricidad;}
 
+ol.about {margin: 0.5em 0; font-size: 120%; line-height: 1.3em;
+         color: @gris;}
 
 
